# calorietracker

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
.pi/: APPEND_SYSTEM.md
.pnpm-store/v11/: index.db
.sandcastle/: CODING_STANDARDS.md  Dockerfile  main.mts  nerdctl-provider.ts  plan-prompt.md  pr-review-prompt.md
api/: .dockerignore  Dockerfile  alembic.ini  conftest.py  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py  10625c3b76d1_add_icon_column_to_ingredients.py  149e7436f092_add_meal_logs_and_meal_log_entries.py  2ea2673576c3_add_token_prefix_to_refresh_tokens.py  8bd69b28d6bd_add_users_and_refresh_tokens.py  a1b2c3d4e5f6_add_macro_targets_table.py  a1b2c3d4e5f6_add_meal_logs_and_entries.py  a1b2c3d4e5f6_add_meal_logs_and_meal_log_entries.py  a1b2c3d4e5f6_add_meal_logs_table.py  a1b2c3d4e5f6_add_pantry_items_table.py  a1b2c3d4e5f6_add_promotion_rejection_note_to_ingredients.py  a1b2c3d4e5f6_add_recipes_and_recipe_ingredients.py  a1b2c3d4e5f6_add_recipes_tables.py  af82bdfd31bf_add_recipes_and_recipe_ingredients.py  b1af3ad3f2de_add_promotion_rejection_note_to_ingredients.py  c3d4e5f6a1b2_add_recipes_and_recipe_ingredients.py  c7c79e7f6e8f_add_macro_targets_table.py  f99f4c01510c_add_ingredients_table.py
api/app/: config.py  database.py  deps.py  limiter.py  main.py  models.py  nutrition.py
api/app/admin/: router.py
api/app/auth/: router.py  utils.py
api/app/ingredients/: router.py
api/app/logs/: __init__.py  router.py
api/app/models/: __init__.py  ingredient.py  macro_target.py  meal_log.py  pantry.py  recipe.py  user.py
api/app/pantry/: __init__.py  router.py
api/app/recipes/: router.py
api/app/schemas/: admin.py  auth.py  calendar.py  ingredient.py  macro_target.py  meal_log.py  pantry.py  recipe.py
api/app/users/: __init__.py  router.py
api/scripts/: default_ingredients.json  fetch_seed_data.py  seed_data.json  seed_ingredients.py
api/tests/: conftest.py  test_admin.py  test_auth.py  test_calendar.py  test_cooking_mode.py  test_ingredient_write.py  test_ingredients.py  test_logs.py  test_macro_targets.py  test_main.py  test_meal_log.py  test_nutrition.py  test_pantry.py  test_recipes.py  test_streak.py
docs/issues/: README.md
docs/prd/: 00-foundation.md  01-recipe-calculator.md  02-meal-logging.md  03-pantry.md  04-history.md  README.md
frontend/: .eslintrc.cjs  Dockerfile  Dockerfile.prod  eslint.config.js  index.html  jest.config.cjs  jest.config.ts  jest.setup.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  (+1 more)
(+650 files in other folders)
